--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <!-- <div class="small_circle">
                                 <p class="flex"><a href="#">&lt;/ <span>CV</span> &gt;</a></p>
                             </div> -->
-                            <a class="small_circle flex" onclick="cv()" href="">&lt;/ <span>CV</span> &gt;</a>
+                            <a class="small_circle flex" href="https://drive.google.com/file/d/1CV3qWzqQnHRXLyVcKIkJeWWMZA6k3cWD/view?usp=sharing">&lt;/ <span>CV</span> &gt;</a>
                         </div>
                     </div>
 
