--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
         <div class="nav-bar">
             <div class="nav_main">
                 <div class="nav lf_padding">
-                <ul class="nav_list">
-                    <li><a href="index.html" class="nav_text"> //01. <span>&lt;Home/&gt;
-                            </span> </a></li>
-                    <li><a href="#project" class="nav_text">//03. <span>&lt;Project/&gt;
-                            </span></a></li>
-                </ul>
-                <div class="menu_main" id="menu-toggle" onclick="toggleMenu()">
-                    <img src="img/menu_btn.png" alt="">
-                </div>
-                <div class="logo">
-                    <p class="name_logo">&lt;h6&gt; <span> Portfolio </span> &lt;/h6&gt;</p>
-                </div>
-                <ul class="nav_list">
-                    <li><a href="#about" class="nav_text"> //02. <span>&lt; About /&gt;</span> </a></li>
-                    <li><a href="#contact" class="nav_text"> //04. <span>&lt; Contact /&gt;</span> </a></li>
-                </ul>
-            </div>
-            <div class="menu_nav" id="menu-list">
-                <div class="menu_nav_main">
                     <ul class="nav_list">
-                        <li><a href="index.html" class="nav_text"> //01. <span>&lt;Home/&gt;</span> </a></li>
+                        <li><a href="index.html" class="nav_text"> //01. <span>&lt;Home/&gt;
+                                </span> </a></li>
+                        <li><a href="#project" class="nav_text">//03. <span>&lt;Project/&gt;
+                                </span></a></li>
+                    </ul>
+                    <div class="menu_main" id="menu-toggle" onclick="toggleMenu()">
+                        <img src="img/menu_btn.png" alt="">
+                    </div>
+                    <div class="logo">
+                        <p class="name_logo">&lt;h6&gt; <span> Portfolio </span> &lt;/h6&gt;</p>
+                    </div>
+                    <ul class="nav_list">
                         <li><a href="#about" class="nav_text"> //02. <span>&lt; About /&gt;</span> </a></li>
-                        <li><a href="#project" class="nav_text">//03. <span>&lt;Project/&gt;</span></a></li>                
-                        <li><a href="#skills" class="nav_text">//03. <span>&lt;Skills/&gt;</span></a></li>                
                         <li><a href="#contact" class="nav_text"> //04. <span>&lt; Contact /&gt;</span> </a></li>
                     </ul>
                 </div>
-            </div>
+                <div class="menu_nav" id="menu-list">
+                    <div class="menu_nav_main">
+                        <ul class="nav_list">
+                            <li><a href="index.html" class="nav_text"> //01. <span>&lt;Home/&gt;</span> </a></li>
+                            <li><a href="#about" class="nav_text"> //02. <span>&lt; About /&gt;</span> </a></li>
+                            <li><a href="#project" class="nav_text">//03. <span>&lt;Project/&gt;</span></a></li>
+                            <li><a href="#skills" class="nav_text">//03. <span>&lt;Skills/&gt;</span></a></li>
+                            <li><a href="#contact" class="nav_text"> //04. <span>&lt; Contact /&gt;</span> </a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
 
@@ -84,7 +84,9 @@
                             <!-- <div class="small_circle">
                                 <p class="flex"><a href="#">&lt;/ <span>CV</span> &gt;</a></p>
                             </div> -->
-                            <a class="small_circle flex" href="https://drive.google.com/file/d/1CV3qWzqQnHRXLyVcKIkJeWWMZA6k3cWD/view?usp=sharing">&lt;/ <span>CV</span> &gt;</a>
+                            <a class="small_circle flex"
+                                href="https://drive.google.com/file/d/1CV3qWzqQnHRXLyVcKIkJeWWMZA6k3cWD/view?usp=sharing">&lt;/
+                                <span>CV</span> &gt;</a>
                         </div>
                     </div>
 
@@ -112,10 +114,11 @@
                             <p class="tag_color">&lt;p&gt;</p>
                             <div class="about_text_section">
                                 <p class="about_name">Aakash Yadav</p>
-                                <p class="about_name_pera">Hi there! , I am Aakash Yadav from Ghaziabad, I am currently
-                                    Pursuing Bachelor of Engineering form ABES Institute of technology and I having an
-                                    experience of building Websites with HTML / CSS / JavaScript and some other cool
-                                    frameworks...
+                                <p class="about_name_pera">Hi, I’m Aakash Yadav, a Computer Science student with a
+                                    passion for creating meaningful technology solutions. My journey in tech began with
+                                    a curiosity to build websites and since then, I’ve gained experience in both
+                                    front-end and back-end development. I enjoy working across the full stack to deliver
+                                    solutions that are both functional and user-friendly.
                                 </p>
                             </div>
                             <div class="about_btn_perents">
@@ -194,16 +197,57 @@
                     <p>&lt;/h3&gt;</p>
                 </div>
                 <div class="project_box_main">
+                    <div class="project_box_three project_common_box hover_element3">
+                        <div class="project-img">
+                            <img src="img/creatorz.jpeg" alt="">
+                        </div>
+                        <div class="project_pera_box_three common_pera_box hidden_element3">
+                            <p class="project_pera_heading">Micro Website</p>
+                            <p class="project_peragraph">CreatorzVision is a portfolio website built using HTML, CSS, JavaScript, React, and PHP.
+                                It showcases services with form handling connected to a PHP-based database.
+                                The site is hosted on Hostinger using a shared hosting plan..</p>
+                            <div class="deno_button">
+                                <a href="https://creatorzvision.com/" target="_blank"
+                                    class="demo_btn">Demo</a>
+                                <a href="https://github.com/aakashy5990/"
+                                    target="_blank" class="demo_btn">Code</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="project_box_four project_common_box hover_element4">
+                        <div class="project-img">
+                            <img src="img/medical.jpeg" alt="">
+                        </div>
+                        <div class="project_pera_box_four common_pera_box hidden_element4">
+                            <p class="project_pera_heading">Medishop Management System</p>
+                            <p class="project_peragraph">Medishop Management System is a web app built using HTML, CSS,
+                                Bootstrap, JavaScript, and Django.
+                                It manages dealers, medicines, employees, customers, and purchase records efficiently.
+                                The system provides a clean interface and centralized control using Django's database.!
+                            </p>
+                            <div class="deno_button">
+                                <a href="https://medishopmanagementsystem-production.up.railway.app/" target="_blank"
+                                    class="demo_btn">Demo</a>
+                                <a href="https://github.com/aakashy5990/MediShopManagementSystem"
+                                    target="_blank" class="demo_btn">Code</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="project_box_one project_common_box hover_element1">
                         <div class="project-img">
                             <img src="img/car_repair.jpg" alt="">
                         </div>
                         <div class="project_pera_box_one common_pera_box hidden_element1">
                             <p class="project_pera_heading">Car Repering Website</p>
-                            <p class="project_peragraph">Empower your car with the care it deserves! Explore our website for expert car repairs that bring life back to your vehicle. Trust our skilled team for a smooth and reliable ride. Your journey begins here! </p>
+                            <p class="project_peragraph">Empower your car with the care it deserves! Explore our website
+                                for expert car repairs that bring life back to your vehicle. Trust our skilled team for
+                                a smooth and reliable ride. Your journey begins here! </p>
                             <div class="deno_button">
-                                <a href="https://aakashy5990.github.io/car_repairing/" target="_blank" class="demo_btn">Demo</a>
-                                <a href="https://www.mediafire.com/file/1nwi3zgm098tzd4/car_repair_web.zip/file" target="_blank" class="demo_btn">Code</a>
+                                <a href="https://aakashy5990.github.io/car_repairing/" target="_blank"
+                                    class="demo_btn">Demo</a>
+                                <a href="https://www.mediafire.com/file/1nwi3zgm098tzd4/car_repair_web.zip/file"
+                                    target="_blank" class="demo_btn">Code</a>
                             </div>
                         </div>
                     </div>
@@ -213,40 +257,18 @@
                         </div>
                         <div class="project_pera_box_two common_pera_box hidden_element2">
                             <p class="project_pera_heading">Brainwave Website</p>
-                            <p class="project_peragraph">Dive into the realm of brainwaves with our cutting-edge platform at brainwave clone website. Explore mindfulness, enhance cognition, and unleash your full mental potential. Elevate your experience with us!</p>
+                            <p class="project_peragraph">Dive into the realm of brainwaves with our cutting-edge
+                                platform at brainwave clone website. Explore mindfulness, enhance cognition, and unleash
+                                your full mental potential. Elevate your experience with us!</p>
                             <div class="deno_button">
-                                <a href="https://aakashy5990.github.io/brainwave-/" target="_blank" class="demo_btn">Demo</a>
-                                <a href="https://www.mediafire.com/file/hlseqqgo1v44ql2/web_design.zip/file" target="_blank" class="demo_btn">Code</a>
+                                <a href="https://aakashy5990.github.io/brainwave-/" target="_blank"
+                                    class="demo_btn">Demo</a>
+                                <a href="https://www.mediafire.com/file/hlseqqgo1v44ql2/web_design.zip/file"
+                                    target="_blank" class="demo_btn">Code</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project_box_three project_common_box hover_element3">
-                        <div class="project-img">
-                            <img src="img/web1.jpg" alt="">
-                        </div>
-                        <div class="project_pera_box_three common_pera_box hidden_element3">
-                            <p class="project_pera_heading">Micro Website</p>
-                            <p class="project_peragraph">Immerse yourself in the symphony of sound on our music platform at microo website. Discover a world of beats, rhythms, and melodies that resonate with your soul. Tune in for a musical journey that transcends boundaries.</p>
-                            <div class="deno_button">
-                                <a href="https://aakashy5990.github.io/microo/" target="_blank" class="demo_btn">Demo</a>
-                                <a href="https://www.mediafire.com/file/eidi6ci2vvdops2/Love_With_Music.zip/file" target="_blank" class="demo_btn">Code</a>
-                            </div>
 
-                        </div>
-                    </div>
-                    <div class="project_box_four project_common_box hover_element4">
-                        <div class="project-img">
-                            <img src="img/old portfolio.jpeg" alt="">
-                        </div>
-                        <div class="project_pera_box_four common_pera_box hidden_element4">
-                            <p class="project_pera_heading">Old Portfolio</p>
-                            <p class="project_peragraph">Explore my journey through creativity and accomplishments on my portfolio website. From design projects to personal reflections, each page tells a unique story. Welcome to a glimpse of my digital world!</p>
-                            <div class="deno_button">
-                                <a href="https://aakashy5990.github.io/personal_website/" target="_blank" class="demo_btn">Demo</a>
-                                <a href="https://www.mediafire.com/file/uqa5x74dfj6035v/personal_web.zip/file" target="_blank" class="demo_btn">Code</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -319,26 +341,26 @@
                 <p>&lt;/h3&gt;</p>
             </div>
             <div class="logos-slide">
-              <img src="./logos_slider_img/2.png" alt="" />
-              <img src="./logos_slider_img/3.png" alt="" />
-              <img src="./logos_slider_img/1.png" alt="" />
-              <img src="./logos_slider_img/4.png" alt="" />
-              <img src="./logos_slider_img/5.png" alt="" />
-              <img src="./logos_slider_img/6.png" alt="" />
-              <img src="./logos_slider_img/7.png" alt="" />
-              <img src="./logos_slider_img/8.png" alt="" />
-              <img src="./logos_slider_img/9.png" alt="" />
+                <img src="./logos_slider_img/2.png" alt="" />
+                <img src="./logos_slider_img/3.png" alt="" />
+                <img src="./logos_slider_img/1.png" alt="" />
+                <img src="./logos_slider_img/6.png" alt="" />
+                <img src="./logos_slider_img/react.png" alt="" />
+                <img src="./logos_slider_img/nodejs.png" alt="" />
+                <img src="./logos_slider_img/8.png" alt="" />
+                <img src="./logos_slider_img/9.png" alt="" />
+                <img src="./logos_slider_img/5.png" alt="" />
             </div>
             <div class="logos-slide">
-              <img src="./logos_slider_img/2.png" alt="" />
-              <img src="./logos_slider_img/3.png" alt="" />
-              <img src="./logos_slider_img/1.png" alt="" />
-              <img src="./logos_slider_img/4.png" alt="" />
-              <img src="./logos_slider_img/5.png" alt="" />
-              <img src="./logos_slider_img/6.png" alt="" />
-              <img src="./logos_slider_img/7.png" alt="" />
-              <img src="./logos_slider_img/8.png" alt="" />
-              <img src="./logos_slider_img/9.png" alt="" />
+                <img src="./logos_slider_img/2.png" alt="" />
+                <img src="./logos_slider_img/3.png" alt="" />
+                <img src="./logos_slider_img/1.png" alt="" />
+                <img src="./logos_slider_img/6.png" alt="" />
+                <img src="./logos_slider_img/react.png" alt="" />
+                <img src="./logos_slider_img/nodejs.png" alt="" />
+                <img src="./logos_slider_img/8.png" alt="" />
+                <img src="./logos_slider_img/9.png" alt="" />
+                <img src="./logos_slider_img/5.png" alt="" />
 
             </div>
         </div>
@@ -409,10 +431,12 @@
                     <div class="form_main">
                         <p id="thanx" class="thanksmess"></p>
                         <form method="POST" action="index.html" name="google-sheet" id="clear_form">
-                            <input type="text" name="Name" id="input_name"placeholder="Your name..." required>
+                            <input type="text" name="Name" id="input_name" placeholder="Your name..." required>
                             <input type="email" id="input_email" name="Email" placeholder="Your Email..." required>
-                            <input type="number" name="Number" id="input_number" placeholder="Contact Number..." required>
-                            <textarea name="Message" id="input_text" cols="30" rows="8" placeholder="Write Message Here..." required></textarea>
+                            <input type="number" name="Number" id="input_number" placeholder="Contact Number..."
+                                required>
+                            <textarea name="Message" id="input_text" cols="30" rows="8"
+                                placeholder="Write Message Here..." required></textarea>
                             <input type="submit" value="Submit" onclick="thanx()" id="button">
                         </form>
                     </div>
@@ -432,16 +456,20 @@
                     <div class="footer_icon_container">
                         <div class="footer_icon_perents">
                             <div class="footer_linkdin_icon common_footer_icon">
-                                <a href="linkedin.com/in/aakash-yadav-9bb5a5263" class="linkdin_link"><i class="ri-linkedin-line"></i></a>
+                                <a href="linkedin.com/in/aakash-yadav-9bb5a5263" class="linkdin_link"><i
+                                        class="ri-linkedin-line"></i></a>
                             </div>
                             <div class="footer_github_icon common_footer_icon">
-                                <a href="https://github.com/aakashy5990" class="github_link"><i class="ri-github-fill"></i></a>
+                                <a href="https://github.com/aakashy5990" class="github_link"><i
+                                        class="ri-github-fill"></i></a>
                             </div>
                             <div class="footer_insta_icon common_footer_icon">
-                                <a href="https://www.instagram.com/creatorz_editz/" class="insta_link"><i class="ri-instagram-line"></i></a>
+                                <a href="https://www.instagram.com/creatorz_editz/" class="insta_link"><i
+                                        class="ri-instagram-line"></i></a>
                             </div>
                             <div class="footer_fb_icon common_footer_icon">
-                                <a href="https://www.facebook.com/profile.php?id=100028252240753" class="fb_link"><i class="ri-facebook-line"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=100028252240753" class="fb_link"><i
+                                        class="ri-facebook-line"></i></a>
                             </div>
                         </div>
                     </div>
