--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <p class="flex"><a href="#">&lt;/ <span>CV</span> &gt;</a></p>
                             </div> -->
                             <a class="small_circle flex"
-                                href="https://drive.google.com/file/d/16gBtUnLkcEWF1ufvv8uFJNA8xn88C7yD/view?usp=drive_link">&lt;/
+                                href="https://drive.google.com/file/d/1DxK_YPuqNUmY84BUvCSOI1blKcZmRUo7/view?usp=sharing">&lt;/
                                 <span>CV</span> &gt;</a>
                         </div>
                     </div>
