--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p>&lt;/h1&gt;</p>
               </div>
               <p class="front_end">
-                &lt;p&gt;<span> Front-end Developer </span>&lt;/p&gt;
+                &lt;p&gt;<span> Full-Stack Developer </span>&lt;/p&gt;
               </p>
             </div>
             <div class="profile_cv_container">
