--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
           </div>
           <div class="footer_bottom">
             <p class="footer__bottom_pera">
-              Created and Managed By Aakash Yadav | 2023 All Right Reserved.
+              Created and Managed By Aakash Yadav | <span id="year"></span> All Right Reserved.
             </p>
           </div>
         </div>
